--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,9 +167,7 @@ p {
   min-height:100%!important;
 }
 #loginSec h1{
-  font-family: 'Great Vibes', cursive;
-  font-size: 4.8rem;
-  color: #923e6c;
+  color: #fff;
 }
 :root {
 --input-padding-x: 1.35rem;
@@ -3058,6 +3056,18 @@ label {
   padding: 0px 15px;
   margin: 0 auto;
   width: 100%;
+}
+
+
+
+#loginSec{
+  position: relative;
+  width: 100%;
+  padding-top: 150px;
+  padding-bottom: 100px;
+  color: white;
+  background: url(https://www.zooty.in/suggestadoc/images/bg-pattern.png), #1c92d2;
+  background: url(https://www.zooty.in/suggestadoc/images/bg-pattern.png), linear-gradient(to left, #dc2430, #7b4397);
 }
 
 
